# workbench-app-example

./: Makefile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt  tox.ini
.github/workflows/: dev.yml  python-app.yml
blueprints-and-jinja-2-templates/07-blueprints-and-jinja-2-templates/: Dockerfile  docker-compose.yml  requirements.txt
blueprints-and-jinja-2-templates/07-blueprints-and-jinja-2-templates/workbench/: app.py
blueprints-and-jinja-2-templates/07-blueprints-and-jinja-2-templates/workbench/blueprints/page/: __init__.py
blueprints-and-jinja-2-templates/07-blueprints-and-jinja-2-templates/workbench/blueprints/page/templates/page/: terms.html
setup/: Dockerfile
src/: Dockerfile  docker-compose.yml
src/workbench_app/: __init__.py  app.py  hello.py  wsgi.py
src/workbench_app/blueprints/page/: __init__.py
src/workbench_app/blueprints/page/templates/page/: terms.html
src/workbench_app/config/: settings.py
src/workbench_app/templates/layouts/: base.html
src/workbench_app_proxy/: __init__.py  jupyter_config.py
tests/: conftest.py
