[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workbench-example-app"
version = "0.0.1"
authors = [
  { name="Matus Kosut", email="matus.kosut@ntnu.no" },
  { name="Diepiriye Okujagu", email="diepiriye.d.okujagu@ntnu.no" },
]
description = "A small example package"
requires-python = ">=3.8"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dynamic = ["readme", "license", "dependencies"]
keywords = [
    "Jupyter",
    "Jupyter Proxy",
    "Jupyter Server Proxy",
    "HUNT Cloud",
    "HUNT Workbench",
    "HUNT Workbench App",
    "JupyterLab",
]

[project.urls]
"Homepage" = "https://github.com/huntdatacenter/workbench-app-example"

[tool.hatch.readme]
path = "README.md"

[tool.hatch.license]
path = "LICENSE.md"

[tool.hatch.dependencies]
path = "requirements.txt"

[project.optional-dependencies]
dev = ["black", "ruamel.yaml", "pytest", "pytest-cov"]

[project.entry-points.jupyter_serverproxy_servers]
webapp = "jupyter_workbench_proxy:run_app"


[tool.hatch.build.targets.wheel]
packages = ["src/workbench_app", "src/workbench_app_proxy"]

[tool.hatch.build.targets.sdist]
artifacts = []
exclude = [".github"]

[tool.hatch.build.targets.workbench_app]

[tool.hatch.build.targets.workbench_app_proxy]


