[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workbench_app"
version = "0.0.1"
authors = [
  { name="Matus Kosut", email="matus.kosut@ntnu.no" },
  { name="Diepiriye Okujagu", email="diepiriye.d.okujagu@ntnu.no" },
]
description = "A small example package"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.8"
dependencies = [
    "flask",
]
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = [
    "Flask App",
]

[project.urls]
"Homepage" = "https://github.com/huntdatacenter/workbench-app-example"

[project.optional-dependencies]
dev = ["black", "ruamel.yaml", "pytest", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["src/workbench_app"]

[tool.hatch.build]
sources = ["src"]
artifacts = [
  "*.svg",
]

[tool.hatch.build.targets.sdist]
artifacts = []
exclude = [".github"]

[tool.hatch.build.targets.workbench_app]



